Penguin data set loaded to begin answering question #1

--- a/p8105_hw1_mbc2178.Rmd
+++ b/p8105_hw1_mbc2178.Rmd
@@ -10,5 +10,10 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
-## R Markdown
+## Problem 1 
+
+```{r}
+data("penguins", package = "palmerpenguins")
+```
+
 
