--- a/p8105_hw1_mbc2178.Rmd
+++ b/p8105_hw1_mbc2178.Rmd
@@ -25,7 +25,7 @@ The mean flipper length in the penguins dataset is `r mean(pull(penguins, flippe
 
 ## Scatter Plot of Flipper Length vs Bill Length by Species
 
-Next, we make a scatter plot of flipper length vs bill length by penguin 
+Next, we made a scatter plot of flipper length vs bill length by penguin 
 species below and saved the scatter plot to my project directory. 
 
 ```{r scatterplot}
@@ -33,8 +33,12 @@ plot_peng <- ggplot(penguins, aes(x = bill_length_mm,
                                   y = flipper_length_mm, color = species)) + 
              geom_point()
 
-ggsave(scatter_penguins, plot = plot_peng, height = 4, width = 6)
+ggsave("penguins.pdf", plot = plot_peng, height = 4, width = 6)
 ```
+
+
+
+
 
 
 
