2nd update of ggsave code

--- a/p8105_hw1_mbc2178.Rmd
+++ b/p8105_hw1_mbc2178.Rmd
@@ -33,8 +33,9 @@ plot_peng <- ggplot(penguins, aes(x = bill_length_mm,
                                   y = flipper_length_mm, color = species)) + 
              geom_point()
 
-ggsave("penguins.pdf", plot = plot_peng, height = 4, width = 6)
+ggsave("penguins.pdf", height = 4, width = 6)
 ```
+
 
 
 
