--- a/p8105_hw1_mbc2178.Rmd
+++ b/p8105_hw1_mbc2178.Rmd
@@ -44,13 +44,28 @@ peng_df <- tibble(
   norm_samp = rnorm (10, mean = 0),
   norm_samp_pos = norm_samp > 0,
   
-  vec_hw <- c("basketball", "handball", "streetball", "soccer","netball", 
+  vec_hw = c("basketball", "handball", "streetball", "soccer","netball", 
               "dodgeball","football","kickball","softball","pongball"), 
   
-  vec_factor_hw <- factor(c("MARRIED","WIDOWED","SINGLE","MARRIED","SINGLE","WIDOWED","SINGLE","SINGLE","WIDOWED",
+  vec_factor_hw = factor(c("MARRIED","WIDOWED","SINGLE","MARRIED","SINGLE","WIDOWED","SINGLE","SINGLE","WIDOWED",
                             "MARRIED"))
 )
 ```
+
+Next, let's try to take the mean of each variable in our new dataset `peng_df` . 
+
+The mean of `norm_samp` is `r  mean(pull(peng_df, norm_samp), na.rm=TRUE)`.
+The mean of `norm_samp_pos` is `r mean(pull(peng_df, norm_samp_pos), na.rm=TRUE)` .
+The mean of `vec_hw` is `r mean(pull(peng_df, vec_hw), na.rm=TRUE)` .
+The mean of `vec_factor_hw` is `r mean(pull(peng_df, vec_factor_hw), na.rm=TRUE)` . 
+
+I noticed that trying to take the mean of the variables `norm_samp_pos` , `vec_hw` 
+and `vec_factor_hw` in the `peng_df` dataset yielded invalid results. In short, 
+R couldn't perform the operation. 
+
+However, I was able to calculate the mean of  variable `norm_samp` in this dataset. 
+
+
 
 
 
