--- a/p8105_hw1_mbc2178.Rmd
+++ b/p8105_hw1_mbc2178.Rmd
@@ -18,7 +18,7 @@ data("penguins", package = "palmerpenguins")
 
 The section below provides a brief description of the penguins dataset. 
 The penguin dataset consists of the following summary statistics:
-`r summary(penguins)` .
+`r head(penguins, 5)`.
 In this dataset, there are `r nrow(penguins) ` observations (rows) and 
 `r ncol(penguins)` variables (columns). 
 The mean flipper length in the penguins dataset is `r mean(pull(penguins, flipper_length_mm), na.rm=TRUE)` measured in millimeters(mm). 
@@ -43,21 +43,16 @@ ggsave("penguins.pdf", height = 4, width = 6)
 peng_df <- tibble(
   norm_samp = rnorm (10, mean = 0),
   norm_samp_pos = norm_samp > 0,
-  
   vec_hw = c("basketball", "handball", "streetball", "soccer","netball", 
               "dodgeball","football","kickball","softball","pongball"), 
-  
-  vec_factor_hw = factor(c("MARRIED","WIDOWED","SINGLE","MARRIED","SINGLE","WIDOWED","SINGLE","SINGLE","WIDOWED",
-                            "MARRIED"))
+  vec_factor_hw = factor(c("MARRIED","WIDOWED","SINGLE","MARRIED","SINGLE","WIDOWED","SINGLE","SINGLE","WIDOWED"
+                            ,"MARRIED"),levels = c("MARRIED", "WIDOWED", "SINGLE"))
 )
 ```
-
-Next, let's try to take the mean of each variable in our new dataset `peng_df` . 
-
-The mean of `norm_samp` is `r mean(pull(peng_df, norm_samp)`.
-The mean of `norm_samp_pos` is `r mean(pull(peng_df, norm_samp_pos))` .
-The mean of `vec_hw` is `r mean(pull(peng_df, vec_hw))` .
-The mean of `vec_factor_hw` is `r mean(pull(peng_df, vec_factor_hw))` . 
+The mean of variable `norm_samp` is `r mean(pull(peng_df,norm_samp))`  
+The mean of `norm_samp_pos` is `r mean(pull(peng_df, norm_samp_pos))` 
+The mean of `vec_hw` is `r mean(pull(peng_df, vec_hw))` 
+The mean of `vec_factor_hw` is `r mean(pull(peng_df, vec_factor_hw))` 
 
 I noticed that trying to take the mean of the variables `vec_hw` and 
 `vec_factor_hw` in the `peng_df` dataset yielded invalid results. In short, 
@@ -71,11 +66,10 @@ Now let's apply the `as.numeric` function to our logical variable `norm_samp_pos
 character variable `vec_hw`, and factor variable `vec_factor_hw`. 
 
 ```{r convert_var, echo = FALSE}
-as.numeric(vec_hw)
-norm_samp_pos = as.numeric(norm_samp_pos)
-vec_hw = as.numeric(vec_hw)
-vec_factor_hw = as.numeric(vec_factor_hw)
-
+  mean(as.numeric(pull(peng_df, norm_samp)))
+  mean(as.numeric(pull(peng_df, norm_samp_pos)))
+  mean(as.numeric(pull(peng_df, vec_hw)))
+  mean(as.numeric(pull(peng_df, vec_factor_hw)))
 ```
 
 
